--- a/views/admin/pages/product-category/create.pug
+++ b/views/admin/pages/product-category/create.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug 
 include ../../mixins/notification-error.pug
+include ../../mixins/tree-level-category.pug
 
 block main 
     +notification-error(messages.error)
@@ -25,13 +26,14 @@ block main
 
         div(class="form-group")
             label(for="parentId") Danh mục cha
-            input(
-                type="text" 
+            select(
                 class="form-control"
                 id="parentId"
                 name="parentId"
-                placeholder="id danh mục cha..."
             )
+                option(value="") --Chọn danh mục cha --     
+                +tree-level-category(parentsCategory, 1)
+
 
         div(class="form-group")
             label(for="description") Mô tả
