--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -31,7 +31,7 @@ block main
         .card-header Danh sách
             .row 
                 .col-7
-                    +form-change-multi()
+                    +form-change-multi('products')
                 
                 .col-2
                     select(class="form-control dropdown-toggle" name="type" sort)
