--- a/views/admin/mixins/record-level-table.pug
+++ b/views/admin/mixins/record-level-table.pug
@@ -10,7 +10,7 @@ mixin record-level-table(arr, level = 1)
                     value=item._id
                 )
                 
-            td #{index + 1}
+            td #{cnt++}
             td 
                 img(src=item.thumbnail
                     alt="Sản phẩm 1"
