--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -95,7 +95,7 @@ block main
                                     value=products[i]._id
                                 )
                                 
-                            td #{i + 1}
+                            td #{pagination.limitItems * (pagination.currentPage - 1) + i + 1}
                             td 
                                 img(src=products[i].thumbnail
                                     alt="Sản phẩm 1"
