[MODIFIIED]: thêm field productCategoryId cho Product

--- a/views/admin/mixins/record-level-table.pug
+++ b/views/admin/mixins/record-level-table.pug
@@ -13,7 +13,7 @@ mixin record-level-table(arr, level = 1)
             td #{cnt++}
             td 
                 img(src=item.thumbnail
-                    alt="Sản phẩm 1"
+                    alt="Ảnh danh mục"
                     width="100px"
                     style="aspect-ratio: 4/3"
                 )
