--- a/views/admin/pages/product-category/edit.pug
+++ b/views/admin/pages/product-category/edit.pug
@@ -37,7 +37,7 @@ block main
                 option(
                     value=""
                 ) --Chọn danh mục cha --
-                +tree-level-category(parentsCategory, 1, productCategory)    
+                +tree-level-category(parentsCategory, 1, productCategory.parentId)    
 
 
         div(class="form-group")
