--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -1,6 +1,7 @@
 extends ../../layouts/default.pug 
 include ../../mixins/notification-error.pug
 include ../../mixins/notification-success.pug
+include ../../mixins/tree-level-category.pug
 
 block main 
     +notification-error(messages.error)
@@ -27,6 +28,18 @@ block main
                 value=product.title
                 required
             )
+
+        div(class="form-group")
+            label(for="productCategoryId") Danh mục
+            select(
+                class="form-control"
+                id="productCategoryId"
+                name="productCategoryId"
+            )
+                option(
+                    value=""
+                ) --Chọn danh mục --
+                +tree-level-category(category, 1, product.productCategoryId)
 
         div(class="form-group")
             label(for="description") Mô tả
