--- a/views/admin/pages/trash/product-deleted.pug
+++ b/views/admin/pages/trash/product-deleted.pug
@@ -40,7 +40,7 @@ block main
                             td #{i + 1}
                             td 
                                 img(src=products[i].thumbnail
-                                    alt="Sản phẩm 1"
+                                    alt="Ảnh sản phẩm đã xóa"
                                     width="100px"
                                     style="aspect-ratio: 4/3"
                                 )
