--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -98,7 +98,7 @@ block main
                             td #{pagination.limitItems * (pagination.currentPage - 1) + i + 1}
                             td 
                                 img(src=products[i].thumbnail
-                                    alt="Sản phẩm 1"
+                                    alt="Sản sản phẩm"
                                     width="100px"
                                     style="aspect-ratio: 4/3"
                                 )
