--- a/views/admin/pages/product-category/detail.pug
+++ b/views/admin/pages/product-category/detail.pug
@@ -6,7 +6,7 @@ block main
     +notification-error(messages.error)
     +notification-success(messages.success)
 
-    h1 Chi tiết danh mục
+    h1(class="mb-4") Chi tiết danh mục
 
     if (productCategory.title)
         div Tên danh mục:  <b>#{productCategory.title}</b>
