--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -7,7 +7,7 @@ include ./../../mixins/notification-error.pug
 include ./../../mixins/record-level-table.pug
 
 block main 
-    h1 Danh mục sản phẩm 
+    h1(class="mb-4") Danh mục sản phẩm 
 
     //- notification
     +notification-success(messages.success)
