--- a/views/admin/pages/products/detail.pug
+++ b/views/admin/pages/products/detail.pug
@@ -6,7 +6,7 @@ block main
     +notification-error(messages.error)
     +notification-success(messages.success)
 
-    h1 Chi tiết sản phẩm
+    h1(class="mb-4") Chi tiết sản phẩm
 
     if (product.title)
         div Tên sản phẩm:  <b>#{product.title}</b>
