--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -7,7 +7,7 @@ include ./../../mixins/notification-success.pug
 include ./../../mixins/notification-error.pug
 
 block main 
-    h1 Danh sách sản phẩm 
+    h1(class="mb-4") Danh sách sản phẩm 
 
     //- notification
     +notification-success(messages.success)
