--- a/views/admin/pages/roles/create.pug
+++ b/views/admin/pages/roles/create.pug
@@ -1,7 +1,7 @@
 extends ../../layouts/default.pug
 
 block main 
-    h1 Thêm mới quyền
+    h1(class="mb-4") Thêm mới quyền
 
     form(
         action="/admin/roles/create"
