--- a/views/admin/pages/roles/detail.pug
+++ b/views/admin/pages/roles/detail.pug
@@ -1,7 +1,7 @@
 extends ../../layouts/default.pug
 
 block main 
-    h1 Chi tiết quyền
+    h1(class="mb-4") Chi tiết quyền
 
     if (record.title)
         div <b>Tiêu đề:</b> #{record.title}
