--- a/views/admin/pages/roles/index.pug
+++ b/views/admin/pages/roles/index.pug
@@ -4,7 +4,7 @@ include ./../../mixins/notification-success.pug
 include ./../../mixins/notification-error.pug
 
 block main 
-    h1 Nhóm quyền
+    h1(class="mb-4") Nhóm quyền
 
     //- notification
     +notification-success(messages.success)
