--- a/views/admin/pages/trash/product-deleted.pug
+++ b/views/admin/pages/trash/product-deleted.pug
@@ -5,7 +5,7 @@ include ./../../mixins/notification-success.pug
 include ./../../mixins/notification-error.pug
 
 block main 
-    h1 Danh sách sản phẩm đã xóa 
+    h1(class="mb-4") Danh sách sản phẩm đã xóa 
     
     //- notification
     +notification-success(messages.success)
