Tạo trang quản lý tài khoản

--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -50,7 +50,7 @@ block main
                     )  + Thêm mới
                 
         .card-body
-            table(class="table table-sm" checbox-multi)
+            table(class="table table-hover table-sm" checbox-multi)
                 thead
                     tr
                         th(class="form-check") 
