--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -66,13 +66,12 @@ block main
                 
                 
         .card-body
-            table(class="table table-sm" checbox-multi)
+            table(class="table table-hover table-sm" checbox-multi)
                 thead
                     tr
-                        th(class="form-check") 
+                        th(class="form-check text-center") 
                             input(
                                 type="checkbox" 
-                                class="form-check-input position-static ml-1"
                                 name="checkall"   
                             )
 
@@ -90,7 +89,6 @@ block main
                             td(class="form-check")
                                 input(
                                     type="checkbox" 
-                                    class="form-check-input position-static ml-1"
                                     name="id"
                                     value=products[i]._id
                                 )
@@ -98,7 +96,7 @@ block main
                             td #{pagination.limitItems * (pagination.currentPage - 1) + i + 1}
                             td 
                                 img(src=products[i].thumbnail
-                                    alt="Sản sản phẩm"
+                                    alt="Ảnh sản phẩm"
                                     width="100px"
                                     style="aspect-ratio: 4/3"
                                 )
