--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -4,10 +4,12 @@
             li 
                 a(href=`${prefixAdmin}/dashboard`) Tổng quan
             li 
-                a(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
+                a(href=`${prefixAdmin}/products-category`) Danh mục 
             li 
-                a(href=`${prefixAdmin}/products`) Danh sách sản phẩm
+                a(href=`${prefixAdmin}/products`) Sản phẩm
             li  
                 a(href=`${prefixAdmin}/roles`) Nhóm quyền
             li 
                 a(href=`${prefixAdmin}/roles/permissions`) Phân quyền
+            li 
+                a(href=`${prefixAdmin}/accounts`) Tài khoản
