Tạo nút đăng xuất admin

--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -6,3 +6,8 @@ header.header
                     a(href=`${prefixAdmin}/dashboard`) ADMIN 
             
             .col-9
+                div(class='text-right')
+                    a(
+                        class='btn btn-danger btn-sm'
+                        href=`${prefixAdmin}/auth/logout`    
+                    ) Đăng xuất
