--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -60,12 +60,12 @@ block main
                                 name="checkall"   
                             )
 
-                        th STT
-                        th Hình ảnh 
-                        th Tiêu đề
-                        th Vị trí
-                        th Trạng thái
-                        th Hành Động
+                        th(class='text-center') STT
+                        th(class='text-center') Hình ảnh 
+                        th(class='text-left') Tiêu đề
+                        th(class='text-center') Vị trí
+                        th(class='text-center') Trạng thái
+                        th(class='text-center') Hành Động
                 tbody
                     //-  biến cnt là để nhúng vào hàm mixin bên dưới
                     - let cnt = 1
